[project]
name = "oss-pycharm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "folium>=0.20.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "streamlit-folium>=0.26.2",
    "uvicorn>=0.42.0",
]
